docs/development/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama2-70b
  namespace: aibrix-system
  labels:
    model.aibrix.ai/name: "llama2-70b"
    model.aibrix.ai/port: "8000"
    adapter.model.aibrix.ai/enabled: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      adapter.model.aibrix.ai/enabled: "true"
      model.aibrix.ai/name: "llama2-70b"
  template:
    metadata:
      labels:
        adapter.model.aibrix.ai/enabled: "true"
        model.aibrix.ai/name: "llama2-70b"
    spec:
      containers:
        - name: llmengine
          image: aibrix/vllm-mock:nightly
          ports:
            - containerPort: 8000
---
# Debug only: Make sure pod can be visited from controller that deployed in mac.
apiVersion: v1
kind: Service
metadata:
  name: llama2-70b
  namespace: aibrix-system
spec:
  selector:
    model.aibrix.ai/name: "llama2-70b"
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30081
  type: NodePort
