docs/development/app/gateway-plugin.yaml
apiVersion: v1
kind: Service
metadata:
  name: aibrix-gateway-plugins
  namespace: aibrix-system
spec:
  selector:
    app: aibrix-gateway-plugins
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aibrix-gateway-plugins
  namespace: aibrix-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aibrix-gateway-plugins
  template:
    metadata:
      labels:
        app: aibrix-gateway-plugins
    spec:
      containers:
        - name: golang-app-container
          image: aibrix/plugins:v0.1.0
          ports:
            - containerPort: 50052
