docs/development/app/users.yaml
apiVersion: v1
kind: Service
metadata:
  name: aibrix-gateway-users
  namespace: aibrix-system
spec:
  selector:
    app: gateway-users
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aibrix-gateway-users
  namespace: aibrix-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-users
  template:
    metadata:
      labels:
        app: gateway-users
    spec:
      containers:
        - name: golang-app-container
          image: aibrix/users:nightly
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
      serviceAccountName: aibrix-gateway-plugin
